--- a/src/layouts/base.scss
+++ b/src/layouts/base.scss
@@ -1,7 +1,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: futura-pt, Helvetica, Arial, 'Hiragino Sans GB',
+  font-family: montserrat, Helvetica, Arial, 'Hiragino Sans GB',
     'Hiragino Sans GB W3', Microsoft JhengHei, WenQuanYi Micro Hei,
     'Microsoft YaHei', sans-serif; // font-size: 1.8rem;
   line-height: 1.5em;
@@ -74,11 +74,29 @@ h6 {
   }
 }
 
+.post-list .post__title a {
+  transition: all 0.24s ease;
+  &:hover {
+    color: #55b559;
+  }
+}
+
 .gatsby-highlight pre[class*='language-'] {
   background: #f9f9f9;
-  font-family: monospace, monospace;
+}
+
+.gatsby-highlight pre[class*='language-'] code {
+  font-family: Monaco;
   font-size: 13px;
   font-weight: 300;
+}
+
+.site-main {
+  position: relative;
+  width: 100%;
+  max-width: 820px;
+  margin: 0 auto;
+  padding: 0 20px 20px 20px;
 }
 
 .site-footer {
@@ -103,5 +121,31 @@ h6 {
     &:hover {
       color: #55acee;
     }
+  }
+}
+
+//
+.page-nav {
+  position: relative;
+  &__prev,
+  &__next {
+    color: #a7a7a7;
+    border-radius: 2px;
+    padding: 3px 10px;
+    transition: all .24s ease;
+    &:hover {
+      color: #fff;
+      background: #414141;
+    }
+    .icon {
+      font-size: 12px;
+      font-weight: 600;
+    }
+  }
+  &__prev {
+    float: left;
+  }
+  &__next {
+    float: right;
   }
 }
