feat: add sidebar
use ReactDom.createPortal(React v16)

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -34,8 +34,15 @@
   border: 0;
   outline: none;
   cursor: pointer;
+  transition: all .24s ease;
   i {
     font-size: 30px;
+  }
+}
+
+.menu-open {
+  .site-nav-switch {
+    transform: rotate(90deg);
   }
 }
 
