--- a/src/layouts/base.scss
+++ b/src/layouts/base.scss
@@ -10,8 +10,9 @@ body {
   background-color: #ebecee;
 }
 
-body {
+html, body, #___gatsby, .site-root {
   margin: 0;
+  height: 100%;
 }
 
 a {
@@ -41,7 +42,7 @@ h6 {
 
 .post {
   position: relative;
-  padding: 40px 0;
+  padding: 40px 40px 50px;
   background: #fff;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
   margin-bottom: 50px;
@@ -63,12 +64,32 @@ h6 {
     color: #464646;
     font-size: 14px;
     line-height: 1.75em;
-    padding: 0 30px;
     a {
       color: #f59200;
       &:hover {
         color: #f08f00;
         background: rgba(255, 152, 0, 0.1);
+      }
+      &.gatsby-resp-image-link:hover {
+        background: initial;
+      }
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      position: relative;
+      margin: 40px auto 30px auto;
+      left: 20px;
+      &:before {
+        position: absolute;
+        left: -20px;
+        top: 0;
+        content: '#';
+        color: #4caf50;
+        font-weight: 400;
       }
     }
   }
@@ -109,6 +130,112 @@ h6 {
   text-align: center;
 }
 
+.site-sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 280px;
+  height: 100%;
+  padding: 20px;
+  background-image: url(../components/sidebar-bg.png);
+  background-repeat: repeat;
+  background-size: 102px 102px;
+  transform: translate3d(280px, 0, 0);
+  transition: all .24s ease;
+}
+
+.site-bio {
+  text-align: center;
+  .about-me {
+    background: rgba(0, 0, 0, 0.1);
+    border: 1px solid #262626;
+    padding: 12px 5px 15px 5px;
+  }
+  .avator {
+    display: block;
+    width: 96px;
+    height: 96px;
+    margin: 4px auto;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    border: 1px solid #000;
+    padding: 3px;
+    overflow: hidden;
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+    }
+  }
+
+  .info {
+    color: #a9a9a9;
+    margin-top: 10px;
+    line-height: 140%;
+    padding: 0 15px;
+    font-size: 12px;
+  }
+  .dark-btn {
+    display: inline-block;
+    background: rgba(0,0,0,.3);
+    border: 1px solid #000;
+    padding: 5px 10px;
+    font-size: 13px;
+    text-align: center;
+    color: #c2c2c2;
+    transition: all .24s ease;
+    &:hover {
+      background-color: #009688;
+    }
+  }
+  .name {
+    padding: 5px 10px;
+  }
+  .menu {
+    margin: 15px auto;
+  }
+  .menu-item {
+    width: 40%;
+    margin: 0 5%;
+    margin-bottom: 10px;
+  }
+}
+
+.site-root {
+  position: relative;
+}
+.site-wrapper {
+  position: relative;
+  transition: all 0.24s ease;
+  min-height: 100%;
+  &__overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.5);
+    transition: all 0.24s ease;
+    z-index: 999;
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.menu-open {
+  .site-wrapper {
+    transform: translate3d(-280px, 0, 0);
+    &__overlay {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+  .site-sidebar {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
 .social-wrapper {
   padding-top: 20px;
   a {
@@ -132,10 +259,13 @@ h6 {
     color: #a7a7a7;
     border-radius: 2px;
     padding: 3px 10px;
-    transition: all .24s ease;
+    transition: all 0.24s ease;
     &:hover {
       color: #fff;
       background: #414141;
+    }
+    .text {
+      margin: 0 4px;
     }
     .icon {
       font-size: 12px;
